--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~10.1.6",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "bootstrap": "^4.5.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase": "^7.0 || ^8.0",
     "rxjs": "~6.6.0",
