--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "ng serve --o",
     "start": "node server.js",
     "build": "ng build --prod",
+    "build-dev": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
