--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "mobcursos-web",
   "version": "0.0.0",
+  "engines": {
+    "node": "12.x",
+    "npm": "6.x"
+  },
   "scripts": {
     "ng": "ng",
     "dev": "ng serve --o",
@@ -9,10 +13,13 @@
     "build-dev": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~10.1.7",
+    "@angular/compiler-cli": "~10.1.6",
     "@angular/animations": "~10.1.6",
     "@angular/common": "~10.1.6",
     "@angular/compiler": "~10.1.6",
