--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "ng": "ng",
     "dev": "ng serve --o",
     "start": "node server.js",
-    "build": "ng build --prod",
-    "build-dev": "ng build",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
